--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,7 +1,7 @@
 INSTALL.txt
 -------------------------------
 
-This module sends informations to analytics by using two methods:
+This module sends informations to analytics and provides an API to integrate to other modules. Methods:
 
 - JS: It sends the infomation on next page load.
 - PHP:
@@ -15,4 +15,3 @@ Starting code: http://code.google.com/p/serversidegoogleanalytics/
 PHP-GA:
 Requires PHP 5.3 as namespaces and closures are used.
 Download from: http://code.google.com/p/php-ga/
-Not implemented yet.
